# ChangeLog for sys-apps/hal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.261 2009/01/05 18:00:17 chainsaw Exp $

*hal-0.5.11-r5 (05 Jan 2009)

  05 Jan 2009; <chainsaw@gentoo.org> +hal-0.5.11-r5.ebuild:
  Enable PMU support for PowerPC hardware, as suggested by Christian Schmitt
  <chrschmitt@gmail.com> in bug #253866.

  28 Dec 2008; Raúl Porcel <armin76@gentoo.org> hal-0.5.11-r1.ebuild:
  Fix bug #252587

  24 Dec 2008; Doug Goldstein <cardoe@gentoo.org> hal-0.5.11-r1.ebuild,
  hal-0.5.11-r4.ebuild:
  fixes to ensure we die on failure of some files. fix paths to migration
  script

  23 Dec 2008; Doug Goldstein <cardoe@gentoo.org> -hal-0.5.7.1-r5.ebuild,
  -hal-0.5.9-r1.ebuild, -hal-0.5.9.1-r1.ebuild, -hal-0.5.9.1-r2.ebuild,
  -hal-0.5.10.ebuild, -hal-0.5.11.ebuild, -hal-0.5.11-r2.ebuild,
  -hal-0.5.11-r3.ebuild:
  remove old versions that are no longer supported

  23 Dec 2008; Doug Goldstein <cardoe@gentoo.org> hal-0.5.11-r1.ebuild,
  hal-0.5.11-r2.ebuild, hal-0.5.11-r3.ebuild, hal-0.5.11-r4.ebuild:
  add back die statements to hopefully prevent successful installations when
  files failed to copy

  19 Dec 2008; Peter Volkov <pva@gentoo.org> hal-0.5.7.1-r5.ebuild,
  hal-0.5.9-r1.ebuild, hal-0.5.9.1-r1.ebuild, hal-0.5.9.1-r2.ebuild,
  hal-0.5.9.1-r3.ebuild, hal-0.5.10.ebuild, hal-0.5.11.ebuild,
  hal-0.5.11-r1.ebuild, hal-0.5.11-r2.ebuild, hal-0.5.11-r3.ebuild,
  hal-0.5.11-r4.ebuild:
  Removed || die after enewuser/enewgroup, bug #237286.

  28 Oct 2008; Markus Rothe <corsair@gentoo.org> hal-0.5.11-r4.ebuild:
  Stable on ppc64

*hal-0.5.11-r4 (26 Oct 2008)

  26 Oct 2008; Markus Rothe <corsair@gentoo.org>
  +files/hal-0.5.11-ppc64.patch, +hal-0.5.11-r4.ebuild:
  Add the patch for ppc64 and ~ppc64 to keywords; bug #176380

  18 Oct 2008; Brent Baude <ranger@gentoo.org> hal-0.5.11-r1.ebuild:
  Marking hal-0.5.11-r1 ppc because nixnut said so
