@@ -69,14 +69,14 @@ DIST hal-0.5.9.1-r2.tar.bz2 4246 RMD160 2b1646289c23db868bd969f7ae851e6c2d317bad
 DIST hal-0.5.9.1.tar.gz 1596347 RMD160 4f1f8b9513d4e168d4d043970c062cc9084f554f SHA1 fc29322a0beba73c2eab3e0a44f9b820a5fbccdd SHA256 5dc5cf08502510a00cecd6e04ef006a74ba7ed4b31d25187b5efadd70a78733b
 EBUILD hal-0.5.11-r1.ebuild 9416 RMD160 435f9ebf2893476c51a0dbd9ac5444d2092726ac SHA1 535ef7592de29914a31123636dac983d5d0cabdc SHA256 ab0a9f34b612318486f025ed4b447f7bc8fdcc8f98fe8f64986e7d2ea2c3b34b
 EBUILD hal-0.5.11-r4.ebuild 9493 RMD160 dfede0559f07ccafe98301de4550493abcf5d2d1 SHA1 030f68de81db95a2583e7e40fcff7bb840733b2a SHA256 7421991e965a040a4a29e9875771bffb5aacbdfb401b3e2d595caa70365b34ad
-EBUILD hal-0.5.11-r5.ebuild 9543 RMD160 a857420ff9e46016ab86d0dd0df487ce406db0aa SHA1 20f2a7332e1713af1a8cfe0f907b77d9c35c7277 SHA256 b80b062076416929ff46e94f1546b77fc459d18bca1bab281717133db4a71651
+EBUILD hal-0.5.11-r6.ebuild 9528 RMD160 a53a6c0f17b45b5d87d6392a6a05a06c6325636c SHA1 d237a3ada8d49dae00d939193edf0e3447b7680a SHA256 ba0611212b30281d7d0cc7691829e4bed8d06d1ffc740c908e64f3868e9e63f4
 EBUILD hal-0.5.9.1-r3.ebuild 6694 RMD160 91f751aa5525c0879cf23bcbb95a9fb343742d0f SHA1 a0b0da643a6c7dab8f0517e01bae4d774224b15a SHA256 09338520c2c1278f1fec32c0c8e9fa95ac906d35eefe52f1f4e1507b12953452
-MISC ChangeLog 42172 RMD160 1c5e11dccde64dae306fb436c1aaa98367f4d247 SHA1 9fa222f12510188caf0ce2881ee101e8e7e61529 SHA256 efbbb153b0024fee7210b42b890fb9eadf4e706d38a2423d0807dda40a64b415
+MISC ChangeLog 42445 RMD160 b7a5b8701fa195920a695a92382c1a477fc8059b SHA1 689dbcaa13e0c1f5a5287a6f05df0335e95d2a4a SHA256 dc7425f91fb0064c93ee870efdbadd94c122ca9c2057e9a35376909865f182c4
 MISC metadata.xml 2118 RMD160 c5e854ace21eaef57ae132e7dd9fe6bbcd644214 SHA1 c936358b6965f4f59c408fdaeed2d5ec22e66144 SHA256 c0eeaa1b4b92601ee0e46deafddaad311af80bc4a0111124fabdb0380386c39a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkliSlwACgkQp5vW4rUFj5oELwCgls3MBmMXTXdWM75Ax5ofP/VA
-3/UAn3tTniApVFpv7h3ai0hNudqZazzV
-=Nxex
+iEYEARECAAYFAkljX8UACgkQp5vW4rUFj5plowCfT+uiNgfG98UnggabmZOzWA0e
+cugAoK8eDQPpY4W5aHzlikjaylN4FZzg
+=nw1E
 -----END PGP SIGNATURE-----
